fix: Dark mode tinted color

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,6 +6,7 @@
 
   --color-bg: #fff;
   --color-text: #333;
+  --color-tinted: #f6f6f9;
 }
 
 /* Custom reset */
@@ -31,6 +32,7 @@
   &.dark {
     --color-bg: #131316;
     --color-text: #fff;
+    --color-tinted: #232326;
   }
 
   #main {
@@ -90,7 +92,7 @@
 }
 
 /* Modifiers */
-.tinted { background: #f6f6f9; }
+.tinted { background: var(--color-tinted); }
 
 /* Helpers */
 .centered { text-align: center; }
@@ -107,5 +109,6 @@
   .wrapper {
     --color-bg: #131316;
     --color-text: #fff;
+    --color-tinted: #232326;
   }
 }
